fix АІ mentor comments

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg height="64" width="64">
-                  <use href="./images/sprite.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="features-item-title">Strategy</h3>
@@ -75,7 +75,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg height="64" width="64">
-                  <use href="./images/sprite.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="features-item-title">Punctuality</h3>
@@ -87,7 +87,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg height="64" width="64">
-                  <use href="./images/sprite.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="features-item-title">Diligence</h3>
@@ -99,7 +99,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg height="64" width="64">
-                  <use href="./images/sprite.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-item-title">Technologies</h3>
@@ -130,28 +130,28 @@
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -172,28 +172,28 @@
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -214,28 +214,28 @@
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -256,28 +256,28 @@
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link" href="">
                       <svg height="16" width="16" class="social-icon">
-                        <use href="./images/sprite.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -427,29 +427,29 @@
           <ul class="social-list">
             <li class="social-item">
               <a class="social-link" href="">
-                <svg height="16" width="16" class="social-icon">
-                  <use href="./images/sprite.svg#instagram"></use>
+                <svg height="24" width="24" class="social-icon">
+                  <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <svg height="16" width="16" class="social-icon">
-                  <use href="./images/sprite.svg#twitter"></use>
+                <svg height="24" width="24" class="social-icon">
+                  <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <svg height="16" width="16" class="social-icon">
-                  <use href="./images/sprite.svg#facebook"></use>
+                <svg height="24" width="24" class="social-icon">
+                  <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <svg height="16" width="16" class="social-icon">
-                  <use href="./images/sprite.svg#linkedin"></use>
+                <svg height="24" width="24" class="social-icon">
+                  <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
